## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS        = src examples bindings docs
EXTRA_DIST     = Doxyfile HACKING
pkgconfigdir   = $(libdir)/pkgconfig
pkgconfig_DATA = hebocr.pc

hebocrdocdir = ${prefix}/share/doc/hebocr
hebocrdoc_DATA = \
        README \
        AUTHORS \
        COPYING \
        NEWS \
        ChangeLog \
        INSTALL \
        HACKING
