dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(hocr, 0.4.1)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)
VERSION_INFO=0:0:0

AC_SUBST(VERSION_INFO)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

PACKAGE_CFLAGS=
PACKAGE_LIBS=-lm

GETTEXT_PACKAGE=hocr
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="he"
AM_GLIB_GNU_GETTEXT

dnl =======================================================================================

build_gui=yes

AC_ARG_ENABLE(gui, [  ---disable-gui	build hocr-gui program [default=yes]], build_gui="$enableval", build_gui=yes)

gui_pkg_modules="libgnomeui-2.0 gtkspell-2.0"
PKG_CHECK_MODULES(gui, [$gui_pkg_modules], gui=yes, gui=no)
AC_SUBST(gui_CFLAGS)
AC_SUBST(gui_LIBS)

if test "x$gui" = "xyes"; then
          AC_MSG_RESULT(yes)
else
		  AC_MSG_RESULT(no)
		  build_gui=no
fi

AM_CONDITIONAL(WITH_GUI, test "x$build_gui" = "xyes")

dnl =======================================================================================

build_cmd=yes

AC_ARG_ENABLE(cmd, [  --disable-cmd	build hocr program [default=yes]], build_cmd="$enableval", build_cmd=yes)

AM_CONDITIONAL(WITH_CMD, test "x$build_cmd" = "xyes")

dnl =======================================================================================

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl =======================================================================================

AC_OUTPUT([
Makefile
hocr.spec
libhocr.pc
src/Makefile
po/Makefile.in
tests/Makefile
examples/Makefile
examples/gui/Makefile
examples/cmd/Makefile
])

dnl ===========================================================================================
echo "
$PACKAGE-$VERSION

	prefix:				${prefix}
	compiler:			${CC}
	
	build hocr			${build_cmd}
	build hocr-gui			${build_gui}
	
	you need ${gui_pkg_modules} development libs 
		to build the gui interface.
"

