dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(hocr, 0.6.7)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

VERSION_INFO=0:0:0
AC_SUBST(VERSION_INFO)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

PACKAGE_CFLAGS=-Wall
PACKAGE_LIBS=-lm

win32=no
case "${host_os}" in
  *mingw* | pw32* | cygwin*)
	win32="yes"
    AC_CHECK_TOOL(WINDRES, windres, :)
    PACKAGE_CFLAGS="$PACKAGE_CFLAGS -mms-bitfields -mno-cygwin"
esac
AM_CONDITIONAL(WITH_WIN32, test x"$win32" = "xyes")

AC_ARG_ENABLE(nls, [  --disable-nls		disable native language support], nls="$enableval", nls=yes)

if test "x$nls" = "xyes"; then
	GETTEXT_PACKAGE=hocr-gtk
	AC_SUBST(GETTEXT_PACKAGE)
	AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
	
	dnl Add the languages which your application supports here.
	ALL_LINGUAS="he"
	AM_GLIB_GNU_GETTEXT
	
	PO_DIR=po
	AC_SUBST(PO_DIR)
fi

dnl =======================================================================================

build_gtk=yes
gtk=no

AC_ARG_ENABLE(gtk, [  --disable-gtk		do not build hocr-gtk program], build_gtk="$enableval", build_gtk=yes)

if test "x$build_gtk" = "xyes"; then
	gtk_pkg_modules="gtk+-2.0 gthread-2.0"
	PKG_CHECK_MODULES(gtk, [$gtk_pkg_modules], gtk=yes, gtk=no)
	AC_SUBST(gtk_CFLAGS)
	AC_SUBST(gtk_LIBS)
fi

AM_CONDITIONAL(WITH_GTK, test "x$gtk" = "xyes")

dnl =======================================================================================

build_gtkspell=yes
gtkspell=no

AC_ARG_ENABLE(gtkspell, [  --disable-gtkspell	do not build hocr-gtk spellchecker], build_gtkspell="$enableval", build_gtkspell=yes)

if test "x$gtk" = "xyes"; then
	if test "x$build_gtkspell" = "xyes"; then
		gtkspell_pkg_modules="gtkspell-2.0"
		PKG_CHECK_MODULES(gtkspell, [$gtkspell_pkg_modules], gtkspell=yes, gtkspell=no)
		AC_SUBST(gtkspell_CFLAGS)
		AC_SUBST(gtkspell_LIBS)
	fi
fi

AM_CONDITIONAL(WITH_GTKSPELL, test "x$gtkspell" = "xyes")
AC_SUBST(WITH_GTKSPELL)

dnl =======================================================================================

build_cmd=yes
cmd=no

AC_ARG_ENABLE(cmd, [  --disable-cmd		do not build hocr program], build_cmd="$enableval", build_cmd=yes)

if test "x$build_cmd" = "xyes"; then
	cmd=yes
fi

AM_CONDITIONAL(WITH_CMD, test "x$cmd" = "xyes")

dnl =======================================================================================

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl =======================================================================================

AC_OUTPUT([
Makefile
libhocr.pc
src/Makefile
po/Makefile.in
tests/Makefile
examples/Makefile
examples/hocr-gtk/Makefile
examples/hocr/Makefile
])

dnl ===========================================================================================
echo "
$PACKAGE-$VERSION

	prefix:				${prefix}
	compiler:			${CC}
	native language support		${nls}
	
	build hocr			${cmd}
	build hocr-gtk			${gtk}
		with spellchecker	${gtkspell}

"
