## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = src examples bindings docs

EXTRA_DIST = \
        bootstrap.sh HACKING

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libhocr.pc

hocrdocdir = ${prefix}/share/doc/libhocr
hocrdoc_DATA = \
        README \
        AUTHORS \
        COPYING \
        NEWS \
        ChangeLog \
        INSTALL \
        HACKING
