## Process this file with automake to produce Makefile.in

EXTRA_DIST = README_examples \
	COPYING_examples \
	qhocr/COPYING \
	qhocr/COPYING.gpl \
	qhocr/COPYING.bsd \
	qhocr/AUTHORS \
	qhocr/INSTALL \
	qhocr/ChangeLog \
	qhocr/README \
	qhocr/qhocr.pro \
	qhocr/mingw-build.bat \
	qhocr/mingw-clean.bat \
	qhocr/mingw-clean.bat \
	qhocr/src/main.cpp \
	qhocr/src/mainwindow.cpp \
	qhocr/src/mainwindow.h \
	qhocr/src/mainwindow.h \
	qhocr/ui/mainwindow.ui

SUBDIRS = gui cmd
