## Process this file with automake to produce Makefile.in

EXTRA_DIST = README_examples \
	COPYING_examples \
	hocr-qt/hocr_qt.pro \
	hocr-qt/hocr_qt.qrc \
	hocr-qt/README-hocr-qt \
	hocr-qt/src/hocr_qt.cpp \
	hocr-qt/src/hocr_qt.h \
	hocr-qt/src/main.cpp \
	hocr-qt/icons/*

SUBDIRS = hocr hocr-gnome
