## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	hocr-qt/hocr_qt.pro \
	hocr-qt/hocr_qt.cpp \
	hocr-qt/hocr_qt.h \
	hocr-qt/main.cpp \
	bindings/python/hocr_py.py \
	bindings/pygtk/pygtk-hocr.py \
	bindings/pygtk/pygtk-hocr.glade \
	bindings/perl/hocr_perl.pl

SUBDIRS = hocr-gtk hocr
